# physics_wonk

./: .gitignore  Cargo.toml  LICENSE  README.md  cspell.json  spin.toml
assets/: index.html
src/: lib.rs  main.rs
